# estoult

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  estoult.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml  tests.yml
apocryphan/: pool.py  rider.py
apocryphes/: pool.py  rider.py
docs/: advanced.rst  api.rst  apocryphan.rst  apocryphes.rst  conf.py  getting_started.rst  how_tos.rst  index.rst  toc.rst
grimoire/: pool.py
tests/: base.py  conftest.py  test_associations.py  test_db.py  test_fn.py  test_op.py  test_query.py  test_schema.py
