[project]
name = "estoult"
version = "0.7.12"
description = "Data mapper and query builder for SQL databases."
readme = "README.md"
requires-python = ">=3.6"
dependencies = []
authors = [{ name = "Justin Duch", email = "justin@duch.me" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/halcyonnouveau/estoult"

[project.optional-dependencies]
mysql = ["mysqlclient>=2.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]

[project.scripts]
rider = "apocryphes.rider:entry"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=7.0.1",
    "ruff>=0.0.17",
]
